# process_triage

./: .gitignore  .ubsignore  AGENTS.md  AGENT_FRIENDLINESS_REPORT.md  Cargo.toml  Dockerfile  PLAN_TO_MAKE_PROCESS_TRIAGE_INTO_AN_ALIEN_TECHNOLOGY_ARTIFACT.md  README.md  RESEARCH_FINDINGS.md  coverage.toml  cpu-limiter.sh  install.sh  justfile  pt  pt-install-tools  target
crates/pt-bundle/: Cargo.toml
crates/pt-bundle/src/: error.rs  lib.rs  manifest.rs  reader.rs  writer.rs
crates/pt-bundle/tests/: bundle_nomock.rs  encryption_verification_e2e.rs
crates/pt-common/: Cargo.toml
crates/pt-common/src/: capabilities.rs  categories.rs  error.rs  galaxy_brain.rs  id.rs  lib.rs  output.rs
crates/pt-common/src/config/: mod.rs  policy.rs  priors.rs  resolve.rs  snapshot.rs
crates/pt-common/tests/: capabilities_manifest_nomock.rs
crates/pt-core/: Cargo.toml
crates/pt-core/benches/: causal_load_martingale.rs  collect_parsers.rs  composite_test.rs  escalation_fleet.rs  expected_goal.rs  inference_posteriors.rs  submodular_cvar.rs  voi_active_sensing.rs  wonham_gittins.rs
crates/pt-core/src/: exit_codes.rs  lib.rs  main.rs  mock_process.rs  schema.rs  shadow.rs  signature_cli.rs  test_log.rs  test_utils.rs  verify.rs
crates/pt-core/src/action/: cgroup_throttle.rs  cpuset_quarantine.rs  dispatch.rs  executor.rs  freeze.rs  mod.rs  prechecks.rs  recovery_tree.rs  renice.rs  signal.rs  supervisor.rs
crates/pt-core/src/agent_init/: config.rs  mod.rs
crates/pt-core/src/audit/: entry.rs  mod.rs  verify.rs  writer.rs
crates/pt-core/src/calibrate/: baseline.rs  baseline_persist.rs  bounds.rs  curve.rs  empirical_bayes.rs  metrics.rs  mod.rs  pac_bayes.rs  queries.rs  report.rs  tuning.rs  validation.rs
crates/pt-core/src/capabilities/: detect.rs  mod.rs
crates/pt-core/src/collect/: cgroup.rs  container.rs  cpu_capacity.rs  deep_scan.rs  macos.rs  mod.rs  network.rs  proc_parsers.rs  protected.rs  quick_scan.rs  real_tests.rs  repro_bug.rs  systemd.rs  tick_delta.rs  tool_runner.rs  types.rs  user_intent.rs
crates/pt-core/src/config/: mod.rs  policy.rs  priors.rs  validation.rs
crates/pt-core/src/daemon/: escalation.rs  metrics.rs  mod.rs  triggers.rs
crates/pt-core/src/decision/: active_sensing.rs  alpha_investing.rs  causal_interventions.rs  composite_test.rs  cvar.rs  dependency_loss.rs  dro.rs  enforcer.rs  escalation.rs  expected_loss.rs  fdr_selection.rs  fleet_pattern.rs  fleet_registry.rs  goal_optimizer.rs  goal_parser.rs  goal_plan.rs  goal_progress.rs  load_aware.rs  martingale_gates.rs  mem_pressure.rs  mod.rs  myopic_policy.rs  ope.rs  rate_limit.rs  robot_constraints.rs  sequential.rs  submodular.rs  voi.rs  wonham_gittins.rs
crates/pt-core/src/events/: mod.rs
crates/pt-core/src/fleet/: discovery.rs  mod.rs  ssh_scan.rs  transfer.rs
crates/pt-core/src/inference/: belief_prop.rs  belief_state.rs  beta_stacy.rs  bma.rs  bocpd.rs  bocpd_opt_test.rs  compound_poisson.rs  confidence_viz.rs  conformal.rs  ctw.rs  evt.rs  explain_api.rs  flip_conditions.rs  galaxy_brain.rs  graph_smoothing.rs  hawkes.rs  hazard.rs  hsmm.rs  imm.rs  impact.rs  kalman.rs  kl_surprisal.rs  ledger.rs  ledger_display.rs  martingale.rs  mod.rs  mpp.rs  posterior.rs  ppc.rs  prior_override.rs  robust.rs  robust_stats.rs  signature_fast_path.rs  sketches.rs  wasserstein.rs
crates/pt-core/src/install/: backup.rs  mod.rs  rollback.rs  verification.rs
crates/pt-core/src/logging/: config.rs  events.rs  layer.rs  mod.rs
crates/pt-core/src/mcp/: mod.rs  protocol.rs  resources.rs  server.rs  tools.rs
crates/pt-core/src/output/: agent_errors.rs  mod.rs  predictions.rs
crates/pt-core/src/plan/: mod.rs
crates/pt-core/src/plugin/: manager.rs  manifest.rs
crates/pt-core/src/session/: compare.rs  diff.rs  mod.rs  (+7 more)
crates/pt-core/tests/: action_real.rs  advanced_inference_regression.rs  agent_apply_dry_run_ok.rs  agent_apply_policy_blocked.rs  agent_apply_precheck_blocked.rs  agent_plan_policy.rs  automation_mode.rs  baseline_tests.rs  blast_radius_tests.rs  cgroup_throttle_real.rs  cli_e2e_real.rs  cli_errors.rs  cli_formats.rs  cli_help.rs  collect_net_real.rs  collect_proc_real.rs  collect_sys_real.rs  container_gpu_detection.rs  decision_nomock.rs  decision_properties.rs  decision_real.rs  e2e_action_tray.rs  e2e_agent_diff_query.rs  e2e_agent_explain_sessions.rs  e2e_agent_fleet_report.rs  e2e_agent_fleet_transfer.rs  e2e_agent_priors_inbox.rs  e2e_agent_tail_watch.rs  e2e_capabilities.rs  e2e_cli_scenarios.rs  e2e_config_presets.rs  e2e_daemon_dormant.rs  e2e_metrics.rs  e2e_output_formatting.rs  e2e_plan.rs  e2e_policy_guardrails.rs  e2e_report.rs  e2e_session_diff.rs  e2e_shadow_lifecycle.rs  e2e_snapshot.rs  (+46 more)
crates/pt-redact/: Cargo.toml
crates/pt-redact/src/: action.rs  canonicalize.rs  detect.rs  engine.rs  error.rs  field_class.rs  hash.rs  lib.rs  policy.rs
crates/pt-redact/tests/: profile_bundle_nomock.rs  redaction_integration.rs
crates/pt-report/: Cargo.toml
crates/pt-report/src/: config.rs  error.rs  generator.rs  lib.rs
crates/pt-report/tests/: bundle_pipeline_nomock.rs  bundle_report_e2e.rs  html_invariants.rs  report_profile_nomock.rs
crates/pt-telemetry/: Cargo.toml
crates/pt-telemetry/src/: lib.rs  retention.rs  schema.rs  shadow.rs  writer.rs
crates/pt-telemetry/tests/: logging_telemetry_nomock.rs  schema_write_nomock.rs  shadow_leak_repro.rs  shadow_retention_pipeline.rs  telemetry_status_prune_e2e.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/config_policy/: sample_minimal
fuzz/corpus/config_priors/: sample_minimal
fuzz/corpus/network_tcp/: sample_tcp4
fuzz/corpus/network_unix/: sample_unix
fuzz/corpus/proc_io/: sample_normal
fuzz/corpus/proc_stat/: sample_bash  sample_with_spaces  sample_zombie
fuzz/corpus/proc_statm/: sample_normal
fuzz/fuzz_targets/: fuzz_bundle_reader.rs  fuzz_config_policy.rs  fuzz_config_priors.rs  fuzz_network_tcp.rs  fuzz_network_udp.rs  fuzz_network_unix.rs  fuzz_proc_cgroup.rs  fuzz_proc_environ.rs  fuzz_proc_io.rs  fuzz_proc_sched.rs  fuzz_proc_schedstat.rs  fuzz_proc_stat.rs  fuzz_proc_statm.rs
(+229 files in other folders)
