[package]
name = "pt-bundle"
description = "Session bundle writer/reader for process triage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

# Bundle format (ZIP)
zip = { version = "2", default-features = false, features = ["deflate", "time"] }

# Checksums
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"

# Local dependencies
pt-redact = { path = "../pt-redact" }

[dev-dependencies]
tempfile = "3"
