[package]
name = "pt-common"
version = "0.1.0"
edition = "2021"
description = "Process Triage shared types, IDs, errors, and JSON schemas"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.2.0", features = ["chrono04"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror.workspace = true
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5"
regex = "1"

[dev-dependencies]
tempfile = "3"
