[package]
name = "pt-core"
version = "0.1.0"
edition = "2021"
description = "Process Triage core inference and decision engine"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/process_triage"
rust-version = "1.88"
readme = "README.md"

[lib]
name = "pt_core"
path = "src/lib.rs"

[[bin]]
name = "pt-core"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "1.2.0", features = ["chrono04"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror.workspace = true
dirs = "5"
libc = "0.2"
regex = "1"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
toon_rust = { workspace = true }

# ECDSA signature verification for release binaries
p256 = { version = "0.13", features = ["ecdsa"] }
base64 = "0.22"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# TUI dependencies (optional, behind "ui" feature)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Internal crates
pt-common = { path = "../pt-common" }
pt-config = { path = "../pt-config" }
pt-math = { path = "../pt-math" }
pt-redact = { path = "../pt-redact" }
pt-bundle = { path = "../pt-bundle" }
pt-telemetry = { path = "../pt-telemetry" }
pt-report = { path = "../pt-report", optional = true }

[features]
default = []
deep = []           # Enable expensive/privileged probes (lsof, ss, perf/eBPF)
report = ["pt-report"]  # HTML report generator
daemon = []         # Dormant monitoring mode
ui = ["ratatui", "crossterm"]  # Premium TUI experience
test-utils = []     # Export test utilities for integration tests
test-tempdir = []   # Enable tempdir helper in test utilities
fleet-dns = []      # Enable DNS-based fleet discovery (scaffold)

[dev-dependencies]
assert_cmd = "2"
criterion = "0.5"
predicates = "3"
tempfile = "3"
regex = "1"
proptest = "1"
filetime = "0.2"

[[bench]]
name = "collect_parsers"
harness = false

[[bench]]
name = "inference_posteriors"
harness = false
