[package]
name = "pt-core"
version = "2.0.3"
edition = "2021"
description = "Process Triage core inference and decision engine"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/process_triage"
rust-version = "1.88"
readme = "README.md"

[lib]
name = "pt_core"
path = "src/lib.rs"

[[bin]]
name = "pt-core"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "1.2.0", features = ["chrono04"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror.workspace = true
dirs = "5"
libc = "0.2"
regex = "1"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
toon = { workspace = true }
tempfile = { version = "3", optional = true }

# ECDSA signature verification for release binaries
p256 = { version = "0.13", features = ["ecdsa"] }
base64 = "0.22"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Prometheus metrics (optional, behind "metrics" feature)
prometheus = { version = "0.13", optional = true }
tiny_http = { version = "0.12", optional = true }

# TUI dependencies (optional, behind "ui" feature)
ftui = { version = "0.1.1", optional = true }

# Internal crates
pt-common = { path = "../pt-common" }
pt-config = { path = "../pt-config" }
pt-math = { path = "../pt-math" }
pt-redact = { path = "../pt-redact" }
pt-bundle = { path = "../pt-bundle" }
pt-telemetry = { path = "../pt-telemetry" }
pt-report = { path = "../pt-report", optional = true }

[features]
default = []
deep = []           # Enable expensive/privileged probes (lsof, ss, perf/eBPF)
report = ["pt-report"]  # HTML report generator
daemon = []         # Dormant monitoring mode
metrics = ["prometheus", "tiny_http"]  # Prometheus /metrics endpoint for daemon
ui = ["ftui"]              # Premium TUI experience (ftui, Elm-style)
test-utils = []     # Export test utilities for integration tests
test-tempdir = ["dep:tempfile"]   # Enable tempdir helper in test utilities
fleet-dns = []      # Enable DNS-based fleet discovery (scaffold)

[dev-dependencies]
assert_cmd = "2"
criterion = "0.5"
predicates = "3"
tempfile = "3"
regex = "1"
proptest = "1"
filetime = "0.2"
ftui-harness = "0.1.1"

[[bench]]
name = "collect_parsers"
harness = false

[[bench]]
name = "inference_posteriors"
harness = false

[[bench]]
name = "session_diff"
harness = false

[[bench]]
name = "quick_scan_synthetic"
harness = false

[[test]]
name = "fleet_integration"
path = "tests/fleet_integration.rs"
required-features = ["test-utils"]

[[test]]
name = "container_gpu_detection"
path = "tests/container_gpu_detection.rs"
required-features = ["test-utils"]
