[package]
name = "pt-redact"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Redaction and hashing engine for process triage telemetry"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Cryptographic hashing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Pattern matching
regex = "1.10"
once_cell = "1.19"

# Random key generation
getrandom = "0.2"

[dev-dependencies]
# Testing
tempfile = "3"
