[package]
name = "pt-telemetry"
version = "0.1.0"
edition = "2021"
description = "Process Triage telemetry storage: Arrow schemas and Parquet writer"
license = "MIT"

[dependencies]
# Arrow/Parquet
arrow = { version = "53", features = ["prettyprint"] }
parquet = { version = "53", features = ["zstd", "snap", "async"] }

# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"

dirs = "5"

# Internal crates
pt-common = { path = "../pt-common" }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
serde_json = "1"  # Re-export for test assertions
